Fix debugging KGP-IT with CC
withDebug causes target project to be evaluated in-process and Gradle
can't serialize CC without these opens

^KT-70493